--- a/index.html
+++ b/index.html
@@ -81,12 +81,7 @@
   <section class="stream‑embed">
     <h2>Live Now / Recent VOD</h2>
     <!-- If you want, embed the Twitch stream iframe, example below: -->
-    <iframe
-      src="https://twitch.tv/?channel=astranauticatv&parent=yourwebsite.com"
-      height="480"
-      width="854"
-      allowfullscreen>
-    </iframe>
+    <iframe src="https://player.twitch.tv/?channel=astranauticatv&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
     <p>If the stream isn’t live, check the channel for the latest VODs!</p>
   </section>
 
@@ -103,3 +98,4 @@
 
 </body>
 </html>
+
