--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <section class="stream‑embed">
     <h2>Live Now / Recent VOD</h2>
     <!-- If you want, embed the Twitch stream iframe, example below: -->
-    <iframe src="https://player.twitch.tv/?channel=astranauticatv&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+    <iframe src="https://player.twitch.tv/?channel=astranauticatv&parent=github.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
     <p>If the stream isn’t live, check the channel for the latest VODs!</p>
   </section>
 
@@ -98,4 +98,5 @@
 
 </body>
 </html>
+
 
