--- a/index.html
+++ b/index.html
@@ -81,7 +81,26 @@
   <section class="stream‑embed">
     <h2>Live Now / Recent VOD</h2>
     <!-- If you want, embed the Twitch stream iframe, example below: -->
-    <iframe src="https://player.twitch.tv/?channel=astranauticatv&parent=twitch.tv" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+    <html>
+  <body>
+    <!-- Add a placeholder for the Twitch embed -->
+    <div id="twitch-embed"></div>
+
+    <!-- Load the Twitch embed JavaScript file -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
+    <script type="text/javascript">
+      new Twitch.Embed("twitch-embed", {
+        width: 854,
+        height: 480,
+        channel: "Astranauticatv",
+        // Only needed if this page is going to be embedded on other websites
+        parent: ["embed.example.com", "othersite.example.com"]
+      });
+    </script>
+  </body>
+</html>
     <p>If the stream isn’t live, check the channel for the latest VODs!</p>
   </section>
 
@@ -98,6 +117,7 @@
 
 </body>
 </html>
+
 
 
 
