--- a/index.html
+++ b/index.html
@@ -81,9 +81,12 @@
   <section class="stream‑embed">
     <h2>Live Now / Recent VOD</h2>
     <!-- If you want, embed the Twitch stream iframe, example below: -->
-    <iframesrc="https://player.twitch.tv/?<channel, video, or collection>&parent: ["embed.example.com", "othersite.example.com"]"height="<height>"width="<width>"allowfullscreen></iframe>
-    <p>If the stream isn’t live, check the channel for the latest VODs!</p>
-  </section>
+    <iframe
+    src="https://player.twitch.tv/?<channel, video, or collection>&parent=index.html"
+    height="<height>"
+    width="<width>"
+    allowfullscreen>
+</iframe>
   <section class="extras">
     <h2>Why tune in?</h2>
     <p>
@@ -97,6 +100,7 @@
 
 </body>
 </html>
+
 
 
 
