--- a/index.html
+++ b/index.html
@@ -81,28 +81,7 @@
   <section class="stream‑embed">
     <h2>Live Now / Recent VOD</h2>
     <!-- If you want, embed the Twitch stream iframe, example below: -->
-    <iframe
-    <html>
-  <body>
-    <!-- Add a placeholder for the Twitch embed -->
-    <div id="twitch-embed"></div>
-
-    <!-- Load the Twitch embed JavaScript file -->
-    <script src="https://embed.twitch.tv/embed/v1.js"></script>
-
-    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
-    <script type="text/javascript">
-      new Twitch.Embed("twitch-embed", {
-        width: 854,
-        height: 480,
-        channel: "monstercat",
-        // Only needed if this page is going to be embedded on other websites
-        parent: ["embed.example.com", "othersite.example.com"]
-      });
-    </script>
-  </body>
-</html>
-</iframe>
+    <iframe src="https://player.twitch.tv/?channel=astranauticatv&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
   <section class="extras">
     <h2>Why tune in?</h2>
     <p>
@@ -116,6 +95,7 @@
 
 </body>
 </html>
+
 
 
 
