--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     <h2>Live Now / Recent VOD</h2>
     <!-- If you want, embed the Twitch stream iframe, example below: -->
     <iframe
-    src="https://twitch.tv/?<Astranauticatv>&parent=streamernews.example.com"
-    height="<height>"
-    width="<width>"
+    src="https://player.twitch.tv/?<Astranauticatv>&parent=streamernews.example.com"
+    height="<300>"
+    width="<400>"
     allowfullscreen>
 </iframe>
   <section class="extras">
