--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <h2>Live Now / Recent VOD</h2>
     <!-- If you want, embed the Twitch stream iframe, example below: -->
     <iframe
-    src="https://player.twitch.tv/?<Astranauticatv>&parent=streamernews.example.com"
+    src="https://player.twitch.tv/?<Astranauticatv>parent=streamernews.example.com"
     height="<300>"
     width="<400>"
     allowfullscreen>
@@ -100,6 +100,7 @@
 
 </body>
 </html>
+
 
 
 
