--- a/index.html
+++ b/index.html
@@ -81,12 +81,26 @@
   <section class="stream‑embed">
     <h2>Live Now / Recent VOD</h2>
     <!-- If you want, embed the Twitch stream iframe, example below: -->
-    <iframe
-    src="https://player.twitch.tv/?<Astranauticatv>parent=streamernews.example.com"
-    height="<300>"
-    width="<400>"
-    allowfullscreen>
-</iframe>
+    <html>
+  <body>
+    <!-- Add a placeholder for the Twitch embed -->
+    <div id="twitch-embed"></div>
+
+    <!-- Load the Twitch embed JavaScript file -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
+    <script type="text/javascript">
+      new Twitch.Embed("twitch-embed", {
+        width: 854,
+        height: 480,
+        channel: "astranauticatv",
+        // Only needed if this page is going to be embedded on other websites
+        parent: ["embed.example.com", "othersite.example.com"]
+      });
+    </script>
+  </body>
+</html>
   <section class="extras">
     <h2>Why tune in?</h2>
     <p>
@@ -100,6 +114,7 @@
 
 </body>
 </html>
+
 
 
 
