--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
     <h2>Where to find ‘em</h2>
     <ul>
       <li>
+        Donate to astra:
+        <a href="https://streamelements.com/astranauticatv/tip" target="_blank">streamelements.com/astranauticatv/tip</a>
+        Youtube:
+        <a href="https://www.youtube.com/@astranautica" target="_blank">youtube.com/@astranautica</a>
+        Discord server:  
+        <a href="https://discord.gg/BxGuyU9rSj" target="_blank">discord.gg/BxGuyU9rSj</a>
         Twitch channel:  
         <a href="https://www.twitch.tv/astranauticatv" target="_blank">twitch.tv/astranauticatv</a>  
       </li>
